--- a/cs1_practical_one-sample-wilcoxon.qmd
+++ b/cs1_practical_one-sample-wilcoxon.qmd
@@ -39,7 +39,7 @@ fishlength_py = pd.read_csv("data/CS1-onesample.csv")
 dissolving_py = pd.read_csv("data/CS1-gastric_juices.csv")
 ```
 
-This test also considers a single sample, however for this test (in contrast to the one sample t-test) we don't have to assume that the parent distribution is normally distributed. We do still need the parent distribution (and consequently the sample) to be symmetric though. In this test we look to see if the *median* of the parent distributions differs significantly from a given hypothesised value (in contrast with the t-test that looks at the *mean*).
+This test also considers a single sample, however for this test (in contrast to the one sample t-test) we don't have to assume that the parent distribution is normally distributed. We do still need the parent distribution (and consequently the sample) to be the same shape and scale. In this test we look to see if the *median* of the parent distributions differs significantly from a given hypothesised value (in contrast with the t-test that looks at the *mean*).
 
 ## Libraries and functions
 
