--- a/index.qmd
+++ b/index.qmd
@@ -17,13 +17,9 @@ Welcome to Core statistics!
 These sessions are intended to enable you to perform core data analysis techniques appropriately and confidently using R.
 
 -   6 lecture-practicals
-
 -   Ongoing formative assessment exercises
-
 -   No formal assessment
-
 -   No mathematical derivations
-
 -   No pen and paper calculations
 
 They are **not** a "how to mindlessly use a stats program" course!
@@ -44,12 +40,12 @@ To know what to do when presented with an arbitrary data set e.g.
 
 ## Core topics
 
-1.  [Simple hypothesis testing](#cs1-intro)
-2.  [Categorical predictor variables](#cs2-intro)
-3.  [Continuous predictors](#cs3-intro)
-4.  [Two predictor variables](#cs4-intro)
-5.  [Multiple predictor variables](#cs5-intro)
-6.  [Power analysis](#cs6-intro)
+1.  Simple hypothesis testing
+2.  Categorical predictors
+3.  Continuous predictors
+4.  Two predictors
+5.  Multiple predictors
+6.  Power analysis
 
 ## Practicals
 
