--- a/cs1_practical_one-sample-t-test.qmd
+++ b/cs1_practical_one-sample-t-test.qmd
@@ -7,31 +7,45 @@ format:
       - sync-tabs.html
 ---
 
-```{r, echo=FALSE}
+```{r}
+#| echo: false
+#| message: false
+#| results: hide
 source(file = "setup.R")
 ```
 
+```{python}
+#| echo: false
+#| message: false
+from plotnine import *
+from scipy import stats
+import pandas as pd
+```
+
 ## Libraries and functions
+
+::: {.callout-note collapse="true"}
+## Click to expand
 
 ::: panel-tabset
 ## tidyverse
 
 | Libraries            | Description                                                                                                       |
-|:---------------------|:-------------------------------------------------|
+|:-----------------------|:-----------------------------------------------|
 | `library(tidyverse)` | A collection of R packages designed for data science                                                              |
 | `library(rstatix)`   | Converts base R stats functions to a tidyverse-friendly format. Also contains extra functionality that we'll use. |
 
 | Functions                 | Description                                                                          |
-|:----------------------|:------------------------------------------------|
+|:-----------------------|:-----------------------------------------------|
 | `rstatix::t_test()`       | Performs a one-sample t-test, Student's t-test and Welch's t-test in later sections. |
-| `rstatix::shapiro_test()` | Performs a Shapiro-Wilk test for normality.|
+| `rstatix::shapiro_test()` | Performs a Shapiro-Wilk test for normality.                                          |
 | `ggplot2::stat_qq()`      | Plots a Q-Q plot for comparison with a normal distribution.                          |
 | `ggplot2::stat_qq_line()` | Adds a comparison line to the Q-Q plot.                                              |
 
 ## R
 
 | Functions        | Description                                                                          |
-|:---------------------|:-------------------------------------------------|
+|:-----------------------|:-----------------------------------------------|
 | `t.test()`       | Performs a one-sample t-test, Student's t-test and Welch's t-test in later sections. |
 | `qqnorm()`       | Plots a Q-Q plot for comparison with a normal distribution.                          |
 | `qqline()`       | Adds a comparison line to the Q-Q plot.                                              |
@@ -51,12 +65,7 @@ source(file = "setup.R")
 | `scipy.stats.ttest_1samp()`     | Calculate the T-test for the mean of ONE group of scores.   |
 | `plotnine.stats.stat_qq()`      | Plots a Q-Q plot for comparison with a normal distribution. |
 | `plotnine.stats.stat_qq_line()` | Adds a comparison line to the Q-Q plot.                     |
-
-```{python, echo=FALSE, results='hide'}
-from plotnine import *
-from scipy import stats
-import pandas as pd
-```
+:::
 :::
 
 ## Data and hypotheses
