--- a/cs1_practical_two-sample-paired-wilcoxon.qmd
+++ b/cs1_practical_two-sample-paired-wilcoxon.qmd
@@ -7,8 +7,10 @@ format:
       - sync-tabs.html
 ---
 
-```{r, echo=FALSE}
+```{r}
 #| echo: false
+#| message: false
+#| results: hide
 source(file = "setup.R")
 ```
 
@@ -39,36 +41,39 @@ cortisol_diff_py = pd.pivot(cortisol_py, index = "patient_id", columns = "time",
 cortisol_diff_py["cortisol_change"] = cortisol_diff_py["evening"].subtract(cortisol_diff_py["morning"])
 ```
 
-A Wilcoxon signed-rank test is an alternative to a paired t-test. It does not require that the data are drawn from normal distributions, but it does require that the distribution of the differences is symmetric. We’re effectively testing to see if the median of the differences between the two samples differs significantly from zero.
+A Wilcoxon signed-rank test is an alternative to a paired t-test. It does not require that the data are drawn from normal distributions, but it does require that the distribution of the differences is symmetric. We're effectively testing to see if the median of the differences between the two samples differs significantly from zero.
 
 ## Libraries and functions
+
+::: {.callout-note collapse="true"}
+## Click to expand
 
 ::: panel-tabset
 ## tidyverse
 
 | Libraries            | Description                                                                                                       |
-|:---------------------|:-------------------------------------------------|
+|:-----------------------|:-----------------------------------------------|
 | `library(tidyverse)` | A collection of R packages designed for data science                                                              |
 | `library(rstatix)`   | Converts base R stats functions to a tidyverse-friendly format. Also contains extra functionality that we'll use. |
 
-| Functions                      | Description                                                                    |
+| Functions                 | Description                                                                                              |
 |:-----------------------------------|:-----------------------------------|
-| `rstatix::t_test()`       | Performs a one-sample t-test, Student's t-test and Welch's t-test in later sections. |
-| `rstatix::shapiro_test()` | Performs a Shapiro-Wilk test for normality.|
-| `ggplot2::stat_qq()`      | Plots a Q-Q plot for comparison with a normal distribution.                          |
-| `ggplot2::stat_qq_line()` | Adds a comparison line to the Q-Q plot.|
-|`ggplot2::geom_jitter()`| Plots jittered points by adding a small amount of random variation to each point, to handle overplotting|
-|`tidyr::pivot_wider()`| "Widens" the data, increasing the number of columns |
+| `rstatix::t_test()`       | Performs a one-sample t-test, Student's t-test and Welch's t-test in later sections.                     |
+| `rstatix::shapiro_test()` | Performs a Shapiro-Wilk test for normality.                                                              |
+| `ggplot2::stat_qq()`      | Plots a Q-Q plot for comparison with a normal distribution.                                              |
+| `ggplot2::stat_qq_line()` | Adds a comparison line to the Q-Q plot.                                                                  |
+| `ggplot2::geom_jitter()`  | Plots jittered points by adding a small amount of random variation to each point, to handle overplotting |
+| `tidyr::pivot_wider()`    | "Widens" the data, increasing the number of columns                                                      |
 
 ## R
 
-| Function            | Description                                                                                                        |
+| Function         | Description                                                                          |
 |:-----------------------------------|:-----------------------------------|
-|`stats::reshape`|Reshapes a data frame from 'long' to 'wide' and vice versa|
-| `t.test()`| Performs a one-sample t-test, Student's t-test and Welch's t-test in later sections.|
-| `qqnorm()`| Plots a Q-Q plot for comparison with a normal distribution.|
-| `qqline()`| Adds a comparison line to the Q-Q plot.|
-| `shapiro.test()`| Performs a Shapiro-Wilk test for normality.|
+| `stats::reshape` | Reshapes a data frame from 'long' to 'wide' and vice versa                           |
+| `t.test()`       | Performs a one-sample t-test, Student's t-test and Welch's t-test in later sections. |
+| `qqnorm()`       | Plots a Q-Q plot for comparison with a normal distribution.                          |
+| `qqline()`       | Adds a comparison line to the Q-Q plot.                                              |
+| `shapiro.test()` | Performs a Shapiro-Wilk test for normality.                                          |
 
 ## Python
 
@@ -78,34 +83,40 @@ A Wilcoxon signed-rank test is an alternative to a paired t-test. It does not re
 | `pandas`      | A Python data analysis and manipulation tool.     |
 | `scipy.stats` | A Python module containing statistical functions. |
 
-| Functions                       | Description |
+| Functions                       | Description                                                                                |
 |:-----------------------------------|:-----------------------------------|
-| `pandas.DataFrame.read_csv`| Reads in a `.csv` file |
-|`scipy.stats.wilcoxon()`|Tests the null hypothesis that two related paired samples come from the same distribution.|
-| `scipy.stats.shapiro()`| Performs the Shapiro-Wilk test|
-| `plotnine.stats.stat_qq()`      | Plots a Q-Q plot for comparison with a normal distribution.             |
-| `plotnine.stats.stat_qq_line()` | Adds a comparison line to the Q-Q plot.
+| `pandas.DataFrame.read_csv`     | Reads in a `.csv` file                                                                     |
+| `scipy.stats.wilcoxon()`        | Tests the null hypothesis that two related paired samples come from the same distribution. |
+| `scipy.stats.shapiro()`         | Performs the Shapiro-Wilk test|
+| `plotnine.stats.stat_qq()`      | Plots a Q-Q plot for comparison with a normal distribution.                                |
+| `plotnine.stats.stat_qq_line()` | Adds a comparison line to the Q-Q plot.|
+:::
 :::
 
 ## Data and hypotheses
+
 Using the `cortisol` dataset from before we form the following null and alternative hypotheses:
 
--	$H_0$: The median of the difference in cortisol levels between the two groups is 0 $(\mu M = \mu E)$
--	$H_1$: The median of the difference in cortisol levels between the two groups is not 0 $(\mu M \neq \mu E)$
+-   $H_0$: The median of the difference in cortisol levels between the two groups is 0 $(\mu M = \mu E)$
+-   $H_1$: The median of the difference in cortisol levels between the two groups is not 0 $(\mu M \neq \mu E)$
 
 We use a two-tailed Wilcoxon signed-rank test to see if we can reject the null hypothesis.
 
 ## Summarise and visualise
+
 Already implemented previously.
 
 ## Assumptions
+
 These have been checked previously.
 
 ## Implement and interpret the test
+
 Perform a two-tailed, Wilcoxon signed-rank test:
 
-:::panel-tabset
+::: panel-tabset
 ## tidyverse
+
 ```{r}
 # perform the test
 cortisol %>% 
@@ -114,11 +125,12 @@ cortisol %>%
               paired = TRUE)
 ```
 
--	The first argument gives the formula
--	The second argument gives the type of alternative hypothesis and must be one of `two.sided`, `greater` or `less` 
--	The third argument says that the data are paired
+-   The first argument gives the formula
+-   The second argument gives the type of alternative hypothesis and must be one of `two.sided`, `greater` or `less`
+-   The third argument says that the data are paired
 
 ## R
+
 ```{r}
 wilcox.test(cortisol ~ time,
             alternative = "two.sided",
@@ -126,10 +138,10 @@ wilcox.test(cortisol ~ time,
             data = cortisol_r)
 ```
 
--	The first argument gives the formula
--	The second argument gives the type of alternative hypothesis and must be one of `two.sided`, `greater` or `less`
--	The third argument indicates that the test is paired
-- The last argument is the data set
+-   The first argument gives the formula
+-   The second argument gives the type of alternative hypothesis and must be one of `two.sided`, `greater` or `less`
+-   The third argument indicates that the test is paired
+-   The last argument is the data set
 
 ## Python
 
@@ -141,6 +153,7 @@ stats.wilcoxon(cortisol_diff_py["evening"],
                alternative = "two-sided")
 ```
 :::
+
 The p-value is given in the `p` column (p-value = 0.000168). Given that this is less than 0.05 we can still reject the null hypothesis.
 
 > A two-tailed, Wilcoxon signed-rank test indicated that the median cortisol level in adult females differed significantly between the morning (320.5 nmol/l) and the evening (188.9 nmol/l) (V = 13, p = 0.00017).
@@ -163,14 +176,14 @@ read_csv("data/examples/cs1-deer.csv") %>%
 
 Do these results provide any evidence to suggest that fore- and hind-leg length differ in deer?
 
-1. Write down the null and alternative hypotheses
-2. Choose a tidy representation for the data and create a csv file (I'll stop asking you to do this from now on...)
-3. Import the data into R
-4. Summarise and visualise the data
-5. Check your assumptions (normality and variance) using appropriate tests
-6. Discuss with your (virtual) neighbour which test is most appropriate?
-7. Perform the test
-8. Write down a sentence that summarises the results that you have found
+1.  Write down the null and alternative hypotheses
+2.  Choose a tidy representation for the data and create a csv file (I'll stop asking you to do this from now on...)
+3.  Import the data into R
+4.  Summarise and visualise the data
+5.  Check your assumptions (normality and variance) using appropriate tests
+6.  Discuss with your (virtual) neighbour which test is most appropriate?
+7.  Perform the test
+8.  Write down a sentence that summarises the results that you have found
 
 ::: {.callout-caution collapse="true"}
 ## Answer
@@ -185,7 +198,7 @@ $H_1$ : foreleg average $\neq$ hindleg average
 
 First of all, we need to get the data into a tidy format (every variable is a column, each observation is a row). Doing this in Excel, and adding a ID gives us:
 
-:::panel-tabset
+::: panel-tabset
 ## tidyverse
 
 ```{r}
@@ -224,7 +237,7 @@ deer %>%
   geom_boxplot()
 ```
 
-All of this suggests that there might be a difference between the legs, with hind legs being longer than forelegs. However, this representation obscures the fact that we have _paired_ data. What we really need to look at is the difference in leg length for each observation:
+All of this suggests that there might be a difference between the legs, with hind legs being longer than forelegs. However, this representation obscures the fact that we have *paired* data. What we really need to look at is the difference in leg length for each observation:
 
 ```{r}
 # create a data set that contains the difference in leg length
@@ -277,7 +290,7 @@ aggregate(length ~ leg, data = deer_r, summary)
 boxplot(length ~ leg, data = deer_r)
 ```
 
-All of this suggests that there might be a difference between the legs, with hind legs being longer than forelegs. However, this representation obscures the fact that we have _paired_ data. What we really need to look at is the difference in leg length for each observation:
+All of this suggests that there might be a difference between the legs, with hind legs being longer than forelegs. However, this representation obscures the fact that we have *paired* data. What we really need to look at is the difference in leg length for each observation:
 
 ```{r}
 leg_diff_r <- reshape(deer_r,
@@ -305,11 +318,12 @@ matplot(t(leg_diff_r[ , 2:3]),
         type = c("b"),
         col = 1:10)
 ```
+
 Again, as far as I am aware of, there isn't a straightforward method of plotting paired data using the base R functionality. Hence the data gymnastics:
 
-* the default `plot()` function doesn't support this - the standard `matplot()` function does
-* the `t` function transposes the data, and I'm only selecting the second and third columns (`[ , 2:3]`) which contain the paired leg measurements.
-* to group (pair) the data, we're using colours, one for each of the 10 observations (`col = 1:10`)
+-   the default `plot()` function doesn't support this - the standard `matplot()` function does
+-   the `t` function transposes the data, and I'm only selecting the second and third columns (`[ , 2:3]`) which contain the paired leg measurements.
+-   to group (pair) the data, we're using colours, one for each of the 10 observations (`col = 1:10`)
 
 ## Python
 
@@ -331,6 +345,7 @@ Let's look at the data and see what we can see.
 # summarise the data
 deer_py.describe()
 ```
+
 We can also summarise by leg type, but we have to put our data into a wide format first:
 
 ```{python}
@@ -346,6 +361,7 @@ leg_diff_py.head()
 ```
 
 Create the summary:
+
 ```{python}
 leg_diff_py.describe()
 ```
@@ -363,7 +379,7 @@ We can visualise this difference:
 )
 ```
 
-All of this suggests that there might be a difference between the legs, with hind legs being longer than forelegs. However, this representation obscures the fact that we have _paired_ data. What we really need to look at is the difference in leg length for each observation:
+All of this suggests that there might be a difference between the legs, with hind legs being longer than forelegs. However, this representation obscures the fact that we have *paired* data. What we really need to look at is the difference in leg length for each observation:
 
 ```{python}
 #| results: hide
@@ -383,12 +399,13 @@ All of this gives us a much clearer picture. It looks as though the hindlegs are
 
 ### Assumptions
 
-We need to consider the distribution of the _difference_ in leg lengths rather than the individual distributions.
+We need to consider the distribution of the *difference* in leg lengths rather than the individual distributions.
 
-:::panel-tabset
+::: panel-tabset
 ## tidyverse
 
 Shapiro-Wilk test:
+
 ```{r}
 # perform Shapiro-Wilk test on leg differences
 leg_diff %>% 
@@ -396,6 +413,7 @@ leg_diff %>%
 ```
 
 Q-Q plot:
+
 ```{r}
 # create a Q-Q plot
 leg_diff %>% 
@@ -405,13 +423,16 @@ leg_diff %>%
 ```
 
 ## R
+
 Shapiro-Wilk test:
+
 ```{r}
 # perform Shapiro-Wilk test on leg differences
 shapiro.test(leg_diff_r$leg_diff)
 ```
 
 Q-Q plot:
+
 ```{r}
 # create a Q-Q plot
 qqnorm(leg_diff_r$leg_diff)
@@ -421,11 +442,14 @@ qqline(leg_diff_r$leg_diff, col = "red")
 ## Python
 
 Shapiro-Wilk test:
+
 ```{python}
 # perform Shapiro-Wilk test on leg length differences
 stats.shapiro(leg_diff_py["leg_diff"])
 ```
+
 Create the Q-Q plot:
+
 ```{python}
 #| results: hide
 # create the Q-Q plot
@@ -441,33 +465,33 @@ Create the Q-Q plot:
 Both our Shapiro-Wilk test and our Q-Q plot suggest that the difference data aren't normally distributed, which rules out a paired t-test. We should therefore consider a paired Wilcoxon test next. Remember that this test requires that the distribution of differences be symmetric, whereas our box plot from before suggested that the data were very much skewed.
 
 ### Conclusions
+
 So, frustratingly, neither of the tests at our disposal are appropriate for this data set. The differences in fore leg and hind leg lengths are neither normal enough for a paired t-test nor are they symmetric enough for a Wilcoxon test. We also don't have enough data to just use the t-test (we'd need more than 30 points or so). So what do we do in this situation? Well, the answer is that there aren't actually any traditional statistical tests that are valid for this data set as it stands!
 
 There are two options available to someone:
 
-1. try transforming the raw data (take logs, square root, reciprocals) and hope that one of them leads to a modified data set that satisfies the assumptions of one of the tests we've covered, or
-2. use a permutation test approach (which would work but is beyond the scope of this course).
+1.  try transforming the raw data (take logs, square root, reciprocals) and hope that one of them leads to a modified data set that satisfies the assumptions of one of the tests we've covered, or
+2.  use a permutation test approach (which would work but is beyond the scope of this course).
 
 The reason I included this example in the first practical is purely to illustrate how a very simple data set with an apparently clear message (leg lengths differ within deer) can be intractable. You don't need to have very complex data sets before you go beyond the capabilities of classical statistics.
 
 As Jeremy Clarkson [would put it](https://www.quotes.net/mquote/941330):
 
 > And on that bombshell, it's time to end. Goodnight!
-
 :::
 
 ## Key points
 
 ::: callout-note
-- We use two-sample tests to see if two samples of continuous data come from the same parent distribution
-- This essentially boils down to testing if the mean or median differs between the two samples
-- There are 5 key two-sample tests: Student's t-test, Welch's t-test, Mann-Whitney U test, paired t-test and Wilcoxon signed-rank test
-- Which one you use depends on normality of the distribution, sample size, paired or unpaired data and variance of the samples
-- Parametric tests are used if the data are normally distributed or the sample size is large
-- Non-parametric tests are used if the data are not normally distributed _and_ the sample size is small
-- Equality of variance then determines which test is appropriate
-- You three questions to determine the test:
-    1. is my data paired?
-    2. do I need a parametric or non-parametric test
-    3. can I assume equality of variance?
+-   We use two-sample tests to see if two samples of continuous data come from the same parent distribution
+-   This essentially boils down to testing if the mean or median differs between the two samples
+-   There are 5 key two-sample tests: Student's t-test, Welch's t-test, Mann-Whitney U test, paired t-test and Wilcoxon signed-rank test
+-   Which one you use depends on normality of the distribution, sample size, paired or unpaired data and variance of the samples
+-   Parametric tests are used if the data are normally distributed or the sample size is large
+-   Non-parametric tests are used if the data are not normally distributed *and* the sample size is small
+-   Equality of variance then determines which test is appropriate
+-   You three questions to determine the test:
+    1.  is my data paired?
+    2.  do I need a parametric or non-parametric test
+    3.  can I assume equality of variance?
 :::
